--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-  
-  
-    <link rel="icon" type="image/svg+xml" href="https://th.bing.com/th/id/OIP.Ge18i0VpVrV9SGMHd_qRmAHaHA?rs=1&pid=ImgDetMain"/>
+    <link rel="icon" type="image/png" href="/src/assets/image/LogoHome1.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KOI FISH</title>
   </head>
